@@ -1,0 +1,9 @@
+SUBDIRS = \
+	test
+
+EXTRA_DIST = \
+	ruby.i \
+	renames.i \
+	example.rb \
+	README.txt 
+
